--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,42 +1,46 @@
-.layout.horizontal,
+@import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);
+.layout.horizontal, .horizontal#home,
 .layout.horizontal-reverse,
+.horizontal-reverse#home,
 .layout.vertical,
-.layout.vertical-reverse {
+#home,
+.layout.vertical-reverse,
+.vertical-reverse#home {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex; }
 
-.layout.inline {
+.layout.inline, .inline#home {
   display: -ms-inline-flexbox;
   display: -webkit-inline-flex;
   display: inline-flex; }
 
-.layout.horizontal {
+.layout.horizontal, .horizontal#home {
   -ms-flex-direction: row;
   -webkit-flex-direction: row;
   flex-direction: row; }
 
-.layout.horizontal-reverse {
+.layout.horizontal-reverse, .horizontal-reverse#home {
   -ms-flex-direction: row-reverse;
   -webkit-flex-direction: row-reverse;
   flex-direction: row-reverse; }
 
-.layout.vertical {
+.layout.vertical, #home {
   -ms-flex-direction: column;
   -webkit-flex-direction: column;
   flex-direction: column; }
 
-.layout.vertical-reverse {
+.layout.vertical-reverse, .vertical-reverse#home {
   -ms-flex-direction: column-reverse;
   -webkit-flex-direction: column-reverse;
   flex-direction: column-reverse; }
 
-.layout.wrap {
+.layout.wrap, .wrap#home {
   -ms-flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap; }
 
-.layout.wrap-reverse {
+.layout.wrap-reverse, .wrap-reverse#home {
   -ms-flex-wrap: wrap-reverse;
   -webkit-flex-wrap: wrap-reverse;
   flex-wrap: wrap-reverse; }
@@ -113,45 +117,47 @@
   flex: 12; }
 
 /* alignment in cross axis */
-.layout.start {
+.layout.start, .start#home {
   -ms-flex-align: start;
   -webkit-align-items: flex-start;
   align-items: flex-start; }
 
-.layout.center,
-.layout.center-center {
+.layout.center, .center#home,
+.layout.center-center,
+#home {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center; }
 
-.layout.end {
+.layout.end, .end#home {
   -ms-flex-align: end;
   -webkit-align-items: flex-end;
   align-items: flex-end; }
 
 /* alignment in main axis */
-.layout.start-justified {
+.layout.start-justified, .start-justified#home {
   -ms-flex-pack: start;
   -webkit-justify-content: flex-start;
   justify-content: flex-start; }
 
-.layout.center-justified,
-.layout.center-center {
+.layout.center-justified, .center-justified#home,
+.layout.center-center,
+#home {
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center; }
 
-.layout.end-justified {
+.layout.end-justified, .end-justified#home {
   -ms-flex-pack: end;
   -webkit-justify-content: flex-end;
   justify-content: flex-end; }
 
-.layout.around-justified {
+.layout.around-justified, .around-justified#home {
   -ms-flex-pack: around;
   -webkit-justify-content: space-around;
   justify-content: space-around; }
 
-.layout.justified {
+.layout.justified, .justified#home {
   -ms-flex-pack: justify;
   -webkit-justify-content: space-between;
   justify-content: space-between; }
@@ -197,7 +203,7 @@
   bottom: 0;
   left: 0; }
 
-body.fullbleed {
+body.fullbleed, body {
   margin: 0;
   height: 100vh; }
 
@@ -235,5 +241,14 @@ body.fullbleed {
 body, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
   margin: 0; }
+
+#home {
+  height: 100%;
+  width: 100%; }
+  #home h1 {
+    font-family: 'Shadows Into Light', cursive; }
+  #home button {
+    margin: 30px auto;
+    display: block; }
 
 /*# sourceMappingURL=style.css.map */
