--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,46 +1,49 @@
 @import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);
-.layout.horizontal, .horizontal#home,
+.layout.horizontal, .horizontal#home, .horizontal#login,
 .layout.horizontal-reverse,
 .horizontal-reverse#home,
+.horizontal-reverse#login,
 .layout.vertical,
 #home,
+#login,
 .layout.vertical-reverse,
-.vertical-reverse#home {
+.vertical-reverse#home,
+.vertical-reverse#login {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex; }
 
-.layout.inline, .inline#home {
+.layout.inline, .inline#home, .inline#login {
   display: -ms-inline-flexbox;
   display: -webkit-inline-flex;
   display: inline-flex; }
 
-.layout.horizontal, .horizontal#home {
+.layout.horizontal, .horizontal#home, .horizontal#login {
   -ms-flex-direction: row;
   -webkit-flex-direction: row;
   flex-direction: row; }
 
-.layout.horizontal-reverse, .horizontal-reverse#home {
+.layout.horizontal-reverse, .horizontal-reverse#home, .horizontal-reverse#login {
   -ms-flex-direction: row-reverse;
   -webkit-flex-direction: row-reverse;
   flex-direction: row-reverse; }
 
-.layout.vertical, #home {
+.layout.vertical, #home, #login {
   -ms-flex-direction: column;
   -webkit-flex-direction: column;
   flex-direction: column; }
 
-.layout.vertical-reverse, .vertical-reverse#home {
+.layout.vertical-reverse, .vertical-reverse#home, .vertical-reverse#login {
   -ms-flex-direction: column-reverse;
   -webkit-flex-direction: column-reverse;
   flex-direction: column-reverse; }
 
-.layout.wrap, .wrap#home {
+.layout.wrap, .wrap#home, .wrap#login {
   -ms-flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap; }
 
-.layout.wrap-reverse, .wrap-reverse#home {
+.layout.wrap-reverse, .wrap-reverse#home, .wrap-reverse#login {
   -ms-flex-wrap: wrap-reverse;
   -webkit-flex-wrap: wrap-reverse;
   flex-wrap: wrap-reverse; }
@@ -117,47 +120,49 @@
   flex: 12; }
 
 /* alignment in cross axis */
-.layout.start, .start#home {
+.layout.start, .start#home, .start#login {
   -ms-flex-align: start;
   -webkit-align-items: flex-start;
   align-items: flex-start; }
 
-.layout.center, .center#home,
+.layout.center, .center#home, .center#login,
 .layout.center-center,
-#home {
+#home,
+#login {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center; }
 
-.layout.end, .end#home {
+.layout.end, .end#home, .end#login {
   -ms-flex-align: end;
   -webkit-align-items: flex-end;
   align-items: flex-end; }
 
 /* alignment in main axis */
-.layout.start-justified, .start-justified#home {
+.layout.start-justified, .start-justified#home, .start-justified#login {
   -ms-flex-pack: start;
   -webkit-justify-content: flex-start;
   justify-content: flex-start; }
 
-.layout.center-justified, .center-justified#home,
+.layout.center-justified, .center-justified#home, .center-justified#login,
 .layout.center-center,
-#home {
+#home,
+#login {
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center; }
 
-.layout.end-justified, .end-justified#home {
+.layout.end-justified, .end-justified#home, .end-justified#login {
   -ms-flex-pack: end;
   -webkit-justify-content: flex-end;
   justify-content: flex-end; }
 
-.layout.around-justified, .around-justified#home {
+.layout.around-justified, .around-justified#home, .around-justified#login {
   -ms-flex-pack: around;
   -webkit-justify-content: space-around;
   justify-content: space-around; }
 
-.layout.justified, .justified#home {
+.layout.justified, .justified#home, .justified#login {
   -ms-flex-pack: justify;
   -webkit-justify-content: space-between;
   justify-content: space-between; }
@@ -242,13 +247,16 @@ body, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
   margin: 0; }
 
-#home {
+#home, #login {
   height: 100%;
   width: 100%; }
-  #home h1 {
-    font-family: 'Shadows Into Light', cursive; }
-  #home button {
+  #home h1, #login h1 {
+    font-family: 'Shadows Into Light', cursive;
+    text-align: center; }
+  #home button, #login button {
     margin: 30px auto;
     display: block; }
+  #home img, #login img {
+    margin: 30px auto; }
 
 /*# sourceMappingURL=style.css.map */
