--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -8,7 +8,7 @@ body, h1, h2, h3, h4, h5, h6, p
 	padding: 0
 	margin: 0
 
-#home
+#home, #login
 	@extend .layout
 	@extend .vertical
 	@extend .center-center
@@ -17,7 +17,11 @@ body, h1, h2, h3, h4, h5, h6, p
 
 	h1
 		font-family: 'Shadows Into Light', cursive
+		text-align: center
 
 	button
 		margin: 30px auto
 		display: block
+
+	img
+		margin: 30px auto
