fixed path and vciews

--- a/views/home.jade
+++ b/views/home.jade
@@ -1,10 +1,8 @@
 extends layout
 
 block content
-	div#login
-		div
-			h1 Logging in
-			img(src='/images/ring-alt.svg')
+	div#main
+		h1 Welcome #{userName}!
 
 block scripts
 	script(src='/scripts/index.js')
