--- a/views/login.jade
+++ b/views/login.jade
@@ -1,8 +1,10 @@
 extends layout
 
 block content
-	div#main
-		h1 Welcome #{userName}!
+	div#login
+		div
+			h1 Logging in
+			img(src='/images/ring-alt.svg')
 
 block scripts
 	script(src='/scripts/login.js')
