--- a/views/login.jade
+++ b/views/login.jade
@@ -7,4 +7,5 @@ block content
 			img(src='/images/ring-alt.svg')
 
 block scripts
+	script(src='/scripts/vendor/trianglify.min.js')
 	script(src='/scripts/login.js')
