--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,11 +2,12 @@ doctype html
 html
 	head
 		title Pocketistic
-		link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', rel='stylesheet', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
+		link(rel='stylesheet', href='/stylesheets/vendor/bootstrap.min.css')
+		link(rel='stylesheet', href='/stylesheets/vendor/sweetalert.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 	body
 		block content
 
-		script(src='https://code.jquery.com/jquery-2.2.4.min.js', integrity='sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=', crossorigin='anonymous')
-		script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
+		script(src='/scripts/vendor/jquery-3.0.0.min.js')
+		script(src='/scripts/vendor/sweetalert.min.js')
 		block scripts
