--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,50 +1,47 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 @import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);
-.layout.horizontal, .horizontal#home, .horizontal#login,
+.layout.horizontal, .horizontal#login,
 .layout.horizontal-reverse,
-.horizontal-reverse#home,
 .horizontal-reverse#login,
 .layout.vertical,
-#home,
 #login,
 .layout.vertical-reverse,
-.vertical-reverse#home,
 .vertical-reverse#login {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex; }
 
-.layout.inline, .inline#home, .inline#login {
+.layout.inline, .inline#login {
   display: -ms-inline-flexbox;
   display: -webkit-inline-flex;
   display: inline-flex; }
 
-.layout.horizontal, .horizontal#home, .horizontal#login {
+.layout.horizontal, .horizontal#login {
   -ms-flex-direction: row;
   -webkit-flex-direction: row;
   flex-direction: row; }
 
-.layout.horizontal-reverse, .horizontal-reverse#home, .horizontal-reverse#login {
+.layout.horizontal-reverse, .horizontal-reverse#login {
   -ms-flex-direction: row-reverse;
   -webkit-flex-direction: row-reverse;
   flex-direction: row-reverse; }
 
-.layout.vertical, #home, #login {
+.layout.vertical, #login {
   -ms-flex-direction: column;
   -webkit-flex-direction: column;
   flex-direction: column; }
 
-.layout.vertical-reverse, .vertical-reverse#home, .vertical-reverse#login {
+.layout.vertical-reverse, .vertical-reverse#login {
   -ms-flex-direction: column-reverse;
   -webkit-flex-direction: column-reverse;
   flex-direction: column-reverse; }
 
-.layout.wrap, .wrap#home, .wrap#login {
+.layout.wrap, .wrap#login {
   -ms-flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap; }
 
-.layout.wrap-reverse, .wrap-reverse#home, .wrap-reverse#login {
+.layout.wrap-reverse, .wrap-reverse#login {
   -ms-flex-wrap: wrap-reverse;
   -webkit-flex-wrap: wrap-reverse;
   flex-wrap: wrap-reverse; }
@@ -121,49 +118,47 @@
   flex: 12; }
 
 /* alignment in cross axis */
-.layout.start, .start#home, .start#login {
+.layout.start, .start#login {
   -ms-flex-align: start;
   -webkit-align-items: flex-start;
   align-items: flex-start; }
 
-.layout.center, .center#home, .center#login,
+.layout.center, .center#login,
 .layout.center-center,
-#home,
 #login {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center; }
 
-.layout.end, .end#home, .end#login {
+.layout.end, .end#login {
   -ms-flex-align: end;
   -webkit-align-items: flex-end;
   align-items: flex-end; }
 
 /* alignment in main axis */
-.layout.start-justified, .start-justified#home, .start-justified#login {
+.layout.start-justified, .start-justified#login {
   -ms-flex-pack: start;
   -webkit-justify-content: flex-start;
   justify-content: flex-start; }
 
-.layout.center-justified, .center-justified#home, .center-justified#login,
+.layout.center-justified, .center-justified#login,
 .layout.center-center,
-#home,
 #login {
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center; }
 
-.layout.end-justified, .end-justified#home, .end-justified#login {
+.layout.end-justified, .end-justified#login {
   -ms-flex-pack: end;
   -webkit-justify-content: flex-end;
   justify-content: flex-end; }
 
-.layout.around-justified, .around-justified#home, .around-justified#login {
+.layout.around-justified, .around-justified#login {
   -ms-flex-pack: around;
   -webkit-justify-content: space-around;
   justify-content: space-around; }
 
-.layout.justified, .justified#home, .justified#login {
+.layout.justified, .justified#login {
   -ms-flex-pack: justify;
   -webkit-justify-content: space-between;
   justify-content: space-between; }
@@ -261,50 +256,49 @@ h1, h2, h3, h4, h5, h6 {
 div, p, span {
   font-family: 'Roboto', sans-serif; }
 
-#home, #login {
-  height: 100%;
-  width: 100%; }
-  #home h1, #login h1 {
-    font-size: 48px;
-    font-family: 'Shadows Into Light', cursive;
-    text-align: center; }
-  #home div.skew-button, #login div.skew-button {
+#login div h1 {
+  font-size: 48px;
+  font-family: 'Shadows Into Light', cursive;
+  text-align: center; }
+
+#login div div.skew-button {
+  overflow: hidden;
+  position: relative;
+  margin: 30px auto;
+  width: 140px; }
+  #login div div.skew-button div {
+    cursor: pointer;
+    text-align: center;
     overflow: hidden;
-    position: relative;
-    margin: 30px auto;
-    width: 140px; }
-    #home div.skew-button div, #login div.skew-button div {
-      cursor: pointer;
-      text-align: center;
-      overflow: hidden;
-      background-color: transparent;
-      border: solid 2px black;
-      color: black;
-      padding: 7.5px 25px;
-      display: block;
-      outline: 0;
-      letter-spacing: 2px;
-      transition: all .4s ease;
-      font-weight: bold; }
-      #home div.skew-button div:before, #login div.skew-button div:before {
-        position: absolute;
-        transition: all .4s ease;
-        content: '';
-        width: 0;
-        bottom: 0;
-        background-color: #3498db;
-        height: 120%;
-        left: -10%;
-        transform: skewX(15deg);
-        z-index: -1; }
-      #home div.skew-button div:hover, #login div.skew-button div:hover {
-        color: white;
-        border-color: #3498db; }
-        #home div.skew-button div:hover::before, #login div.skew-button div:hover::before {
-          width: 120%; }
-  #home img, #login img {
-    margin: 30px auto;
+    background-color: transparent;
+    border: solid 2px black;
+    color: black;
+    padding: 7.5px 25px;
     display: block;
-    width: 50px; }
+    outline: 0;
+    letter-spacing: 2px;
+    transition: all .4s ease;
+    font-weight: bold; }
+    #login div div.skew-button div:before {
+      position: absolute;
+      transition: all .4s ease;
+      content: '';
+      width: 0;
+      bottom: 0;
+      background-color: #3498db;
+      height: 120%;
+      left: -10%;
+      transform: skewX(15deg);
+      z-index: -1; }
+    #login div div.skew-button div:hover {
+      color: white;
+      border-color: #3498db; }
+      #login div div.skew-button div:hover::before {
+        width: 120%; }
+
+#login div img {
+  margin: 30px auto;
+  display: block;
+  width: 50px; }
 
 /*# sourceMappingURL=style.css.map */
