--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,14 @@
-extends layout
+doctype html
+html
+	head
+		title Pocketistic
+		link(rel='stylesheet', href='/stylesheets/vendor/bootstrap.min.css')
+		link(rel='stylesheet', href='/stylesheets/vendor/sweetalert.css')
+		link(rel='stylesheet', href='/stylesheets/style.css')
 
-block content
-	h1= message
-	h2= error.status
-	pre #{error.stack}
+	body
+		h1= message
+		h2= error.status
+		pre #{error.stack}
+
+		script(src='/scripts/vendor/jquery-3.0.0.min.js')
