--- a/views/login.jade
+++ b/views/login.jade
@@ -1,11 +1,23 @@
-extends layout
+doctype html
+html
+	head
+		title Pocketistic
+		link(rel='stylesheet', href='/stylesheets/vendor/bootstrap.min.css')
+		link(rel='stylesheet', href='/stylesheets/vendor/sweetalert.css')
+		link(rel='stylesheet', href='/stylesheets/style.css')
 
-block content
-	div#login
-		div
-			h1 Logging in
-			img(src='/images/ring-alt.svg')
+	body#login
+		if !end
+			div
+				h1 Pocketistic
+				div.skew-button: div SIGN IN
+		else
+			div
+				div
+					h1 Logging in
+					img(src='/images/ring-alt.svg')
 
-block scripts
-	script(src='/scripts/vendor/trianglify.min.js')
-	script(src='/scripts/login.js')
+		script(src='/scripts/vendor/jquery-3.0.0.min.js')
+		script(src='/scripts/vendor/sweetalert.min.js')
+		script(src='/scripts/vendor/trianglify.min.js')
+		script(src='/scripts/login.js')
