--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -244,7 +244,8 @@ body {
   width: 100vw;
   background-size: cover;
   background-position: center center;
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 1.5px; }
 
 body, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
@@ -252,9 +253,6 @@ body, h1, h2, h3, h4, h5, h6, p {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Shadows Into Light', cursive; }
-
-div, p, span {
-  font-family: 'Roboto', sans-serif; }
 
 #login div h1 {
   font-size: 48px;
