--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -10,6 +10,7 @@ body
 	background-size: cover
 	background-position: center center
 	font-family: 'Roboto', sans-serif
+	letter-spacing: 1.5px
 
 body, h1, h2, h3, h4, h5, h6, p
 	padding: 0
@@ -17,9 +18,6 @@ body, h1, h2, h3, h4, h5, h6, p
 
 h1, h2, h3, h4, h5, h6
 	font-family: 'Shadows Into Light', cursive
-
-div, p, span
-	font-family: 'Roboto', sans-serif
 
 #login
 	@extend .layout
