--- a/views/index.jade
+++ b/views/index.jade
@@ -6,8 +6,26 @@ html
 		link(rel='stylesheet', href='/stylesheets/vendor/bootstrap-dashboard.css')
 		link(rel='stylesheet', href='/stylesheets/vendor/sweetalert.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
-block content
-	div#home
+	body#home
+		nav.navbar.navbar-inverse.navbar-fixed-top
+			div.container-fluid
+				div.navbar-header
+					button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
+						span.sr-only Toggle navigation
+						span.icon-bar
+						span.icon-bar
+						span.icon-bar
+					a.navbar-brand(href='#') Pocketistic
+		div.container-fluid
+			div.row
+				div.col-sm-3.col-md-2.sidebar
+					ul.nav.nav-sidebar
+						li.active: a(href='#') Overview
+						li: a(href='#') Overview
+						li: a(href='#') Overview
+				div.col-sm-9.col-md-10.col-sm-offset-3.col-md-offset-2.main
+					h1.page-header Dashboard
+					div.row
 
 
 	script(src='/scripts/vendor/jquery-3.0.0.min.js')
