chartjs and proxied retrieve

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,13 +21,15 @@ html
 				div.col-sm-3.col-md-2.sidebar
 					ul.nav.nav-sidebar
 						li.active: a(href='#') Overview
-						li: a(href='#') Overview
-						li: a(href='#') Overview
+						li: a(href='#') Daily
+						li: a(href='#') Monthly
 				div.col-sm-9.col-md-10.col-sm-offset-3.col-md-offset-2.main
 					h1.page-header Dashboard
 					div.row
+						p Total read
 
 
 	script(src='/scripts/vendor/jquery-3.0.0.min.js')
 	script(src='/scripts/vendor/sweetalert.min.js')
+	script(src='/scripts/vendor/chart.min.js')
 	script(src='/scripts/index.js')
