--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -299,4 +299,14 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   width: 50px; }
 
+#home .navbar .navbar-brand {
+  font-family: 'Shadows Into Light', cursive;
+  color: #E4F1FE;
+  cursor: default;
+  font-size: 24px; }
+
+#home .navbar li > a {
+  color: #E4F1FE;
+  cursor: default; }
+
 /*# sourceMappingURL=style.css.map */
