--- a/views/index.pug
+++ b/views/index.pug
@@ -28,4 +28,5 @@ html
 	script(src='/scripts/vendor/jquery-3.1.0.min.js')
 	script(src='/scripts/vendor/sweetalert.min.js')
 	script(src='/scripts/vendor/chart.min.js')
+	script(src='/scripts/vendor/rivets.bundled.min.js')
 	script(src='/scripts/index.js')
