--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,8 @@ html
 					a.navbar-brand(href='#') Pocketistic
 				div.navbar-collapse.collapse#navbar
 					ul.nav.navbar-nav.navbar-right
-						li: a(href='#') #{userName}
+						li: a#update(href='#') refresh
+						li: a(href='#') #{username}
 		div.container-fluid
 			div.row
 				div.col-md-12.main
