pie chart for article count

--- a/views/index.pug
+++ b/views/index.pug
@@ -28,6 +28,7 @@ html
 					p Unread: {data.count.unread}
 					p Total word count: {data.count.wordCount}
 					p Average words per article: {data.count.averageWordCount}
+					canvas#count-graph
 					canvas#domain-graph
 
 
