--- a/views/index.pug
+++ b/views/index.pug
@@ -34,8 +34,10 @@ html
 								canvas#count-graph
 						div.col-md-6
 							div.card-1
-								p Total word count: {data.count.wordCount}
-								p Average words per article: {data.count.averageWordCount}
+								p Word count
+								p Total: {data.count.wordCount}
+								p Average per article: {data.count.averageWordCount}
+								canvas#word-graph
 					canvas#domain-graph
 
 
