--- a/views/index.pug
+++ b/views/index.pug
@@ -31,6 +31,7 @@ html
 							div.card-1
 								p Article count
 								p Total: {data.count.total}
+								p test
 								canvas#count-graph
 						div.col-md-6
 							div.card-1
