removed jquery and replaced with axois/vanilla js

--- a/views/index.pug
+++ b/views/index.pug
@@ -39,7 +39,7 @@ html
 					canvas#domain-graph
 
 
-	script(src='/scripts/vendor/jquery-3.1.0.min.js')
+	script(src='/scripts/vendor/axios.min.js')
 	script(src='/scripts/vendor/sweetalert.min.js')
 	script(src='/scripts/vendor/chart.min.js')
 	script(src='/scripts/vendor/rcolor.js')
