--- a/views/login.pug
+++ b/views/login.pug
@@ -17,7 +17,7 @@ html
 					h1 Logging in
 					img(src='/images/ring-alt.svg')
 
-		script(src='/scripts/vendor/jquery-3.1.0.min.js')
+		script(src='/scripts/vendor/axios.min.js')
 		script(src='/scripts/vendor/sweetalert.min.js')
 		script(src='/scripts/vendor/trianglify.min.js')
 		script(src='/scripts/login.js')
